--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "MaximeArn",
   "license": "ISC",
   "dependencies": {
+    "@logtail/node": "^0.4.17",
+    "@logtail/winston": "^0.4.17",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
