--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "books_directory",
   "version": "1.0.0",
-  "description": "## features to integrate :",
+  "description": "books_directory",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "author": "MaximeArn",
   "license": "ISC",
